<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Repechage</string>
  <string name="proceed">Proceed</string>
  <string name="participants_activity_label">Participants</string>
  <string name="go_for_round">Go For Round</string>
  <string name="go_for_round_one">Go For Round 1</string>
  <string name="round_details">Round Details</string>
  <string name="participant_name_error">You should enter names of all the participants</string>
  <string name="ok">OK</string>
  <string name="winner">Select Winner:</string>
  <string name="next">Next</string>
  <string name="invalid_lanes_error">Number of lanes should be 2, 3 or 4</string>
  <string name="empty_lanes_entries_data">Number of lanes or entries cannot be empty.</string>
  <string name="num_of_entries">No. of entries :</string>
  <string name="num_of_lanes">No. of lanes :</string>
  <string name="congratulations">Congratulations!!!</string>
  <string name="gold">Gold:</string>
  <string name="silver">Silver:</string>
  <string name="bronze">Bronze:</string>
  <string name="result">Result</string>
  <string name="start_new">Start New !</string>

</resources>
