<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    style="@style/activity_style"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:text="@string/congratulations"
      android:textSize="20sp"
      android:layout_marginBottom="20dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gold"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/gold_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical"
      android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silver"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/silver_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bronze"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/bronze_winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

  </LinearLayout>

  <Button
      style="@style/button_style"
      android:text="@string/start_new"
      android:onClick="startNew"/>

</LinearLayout>